[gd_scene load_steps=5 format=3 uid="uid://6wsqxkjc6csy"]

[ext_resource type="PackedScene" uid="uid://bdmsbf0fuwqno" path="res://UI/Views/StatUI.tscn" id="1_bgnbj"]
[ext_resource type="Script" uid="uid://skef6xfeeesu" path="res://UI/Views/StatPips.gd" id="2_2gygj"]
[ext_resource type="Texture2D" uid="uid://c5xfn2y6rwvas" path="res://Assets/Images/StatPip.png" id="3_csb5x"]
[ext_resource type="Texture2D" uid="uid://cymqs5685rbo0" path="res://Assets/Images/StatPipDepleted.png" id="4_7605v"]

[node name="StatPips" instance=ExtResource("1_bgnbj")]
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 3
script = ExtResource("2_2gygj")
symbol = ExtResource("3_csb5x")
depletedSymbol = ExtResource("4_7605v")
shouldAddSpaceAfterPrefix = false
shouldShowValue = false

[node name="Pips" type="HBoxContainer" parent="." index="2"]
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="AvailablePips" type="TextureRect" parent="Pips" index="0"]
texture_repeat = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
expand_mode = 2
stretch_mode = 1

[node name="DepletedPips" type="TextureRect" parent="Pips" index="1"]
modulate = Color(1, 1, 1, 0.5)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
expand_mode = 2
stretch_mode = 1
